Improving standard.css to try to avoid dgrid bug when overflows and does not display data

--- a/WebContent/css/standard.css
+++ b/WebContent/css/standard.css
@@ -111,5 +111,6 @@ body {
 
 .dgrid .dgrid-scroller {
     position: relative;
-    overflow: visible;
+    max-height: 400px;
+    overflow: auto;
 }
